# AI-Research-Room

./: .gitignore  AGENTS.md  BUILD.md  BUILD_amendment_phase12.md  BUILD_amendment_phase13.md  BUILD_amendment_phase14.md  BUILD_amendment_phase15.md  BUILD_amendment_phase16.md  BUILD_amendment_phase17.md  BUILD_amendment_phase18.md  BUILD_amendment_phase19.md  BUILD_amendment_phase20.md  BUILD_amendment_phase22.md  BUILD_amendment_phase23.md  BUILD_amendment_phase24.md  BUILD_amendment_phase25.md  BUILD_amendment_phase26.md  BUILD_amendment_phase27.md  BUILD_amendment_phase28.md  BUILD_amendment_phase29.md  BUILD_amendment_phase30.md  BUILD_amendment_phase39.md  BUILD_amendment_reasoning.md  BUILD_amendment_rooms_margin.md  CLAUDE.md  DEFERRED.md  README.md  Room.bat  config.toml  pyproject.toml  room
cli/: room.py
engine/: __init__.py  artifacts.py  channel.py  channel_mcp.py  code_seat.py  context.py  export_md.py  margin.py  modes.py  providers.py  rooms.py  secrets.py  settings.py  transcript.py
references/: FUSION_ROADMAP.md  judge_rubric.md  mapping_rubric.md
tests/: browser_margin.py  browser_phase12.py  browser_phase13.py  browser_phase14.py  browser_phase14b.py  browser_phase15.py  browser_phase16.py  browser_phase17.py  browser_phase18.py  browser_phase20.py  browser_phase22.py  browser_phase23.py  browser_phase24.py  browser_phase25.py  browser_phase26.py  browser_phase27.py  browser_phase28.py  browser_phase29.py  browser_phase30.py  browser_phase31.py  browser_phase32.py  browser_phase33.py  browser_phase34.py  browser_phase35.py  browser_phase36.py  (+38 more)
(+18 files in other folders)
