[project]
name = "research-room"
version = "0.1.0"
description = "Multi-model research room — headless engine + thin clients"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["engine", "engine.adapters", "cli", "web"]
